added route GetOptimalMeetTimeForGroupOfUsers
