# internal/controllers/get_free_time_for_group_of_users.go
@@ -1,8 +1,78 @@
 package controllers
 
-import "github.com/labstack/echo/v4"
+import (
+	"calendar/internal/constants"
+	"calendar/internal/helpers"
+	"calendar/internal/models"
+	"calendar/internal/repository"
+	"net/http"
+	"time"
 
-func (h *handler) GetFreeTimeForGroupOfUsers(c echo.Context) error {
+	"github.com/labstack/echo/v4"
+)
 
-	return nil
+const (
+	maxFetchRowsNumber          = 100
+	delayMinutesFromNowInterval = 15
+)
+
+// GetOptimalMeetTimeForGroupOfUsers godoc
+// @Summary  get first time interval for meeting for group of users when all of them are free
+// @Tags     meeting
+// @Accept   json
+// @Produce  json
+// @Param    FindOptimalMeetingTimeRequest  body      models.FindOptimalMeetingTimeRequest  true  "request body for creating meeting"
+// @Success  201                            {object}  models.DataError
+// @Failure  400                            {object}  models.DataError
+// @Failure  500                            {object}  models.DataError
+// @Router   /meetings/suggest [post]
+func (h *handler) GetOptimalMeetTimeForGroupOfUsers(c echo.Context) error {
+	req := new(models.FindOptimalMeetingTimeRequest)
+	if err := c.Bind(req); err != nil {
+		return err
+	}
+	if err := c.Validate(req); err != nil {
+		return err
+	}
+
+	var resStart, resEnd *time.Time
+
+	offset := 0
+	prev := time.Now().Add(delayMinutesFromNowInterval * time.Minute)
+
+	for {
+		// values already sorted
+		meetings, err := repository.FindOptimalMeetingAfterCertainMoment(c, h.pool, req.UserIDs, prev, maxFetchRowsNumber, offset)
+		if err != nil {
+			return err
+		}
+		if len(meetings) == 0 {
+			break
+		}
+
+		for i := 0; i < len(meetings); i++ {
+			fromPrevMinutesPassed := meetings[i].From.Sub(prev).Minutes()
+			if fromPrevMinutesPassed > float64(req.MinDurationMinutes) {
+				resStart = &prev
+				temp := prev.Add(time.Minute * time.Duration(req.MinDurationMinutes))
+				resEnd = &temp
+				break
+			}
+			prev = meetings[i].To
+		}
+
+		if resStart != nil {
+			break
+		}
+		offset += maxFetchRowsNumber
+	}
+
+	if resStart == nil || time.Now().Sub(*resStart).Minutes() > delayMinutesFromNowInterval {
+		return helpers.WrapSuccess(c, http.StatusOK, constants.NotFoundOptimalMeetingForTheInterval)
+	}
+
+	return helpers.WrapSuccess(c, http.StatusOK, &models.FindOptimalMeetingTimeResponse{
+		From: resStart.Format(constants.PrettyDateTimeFormat),
+		To:   resEnd.Format(constants.PrettyDateTimeFormat),
+	})
 }
