# internal/models/meeting.go
@@ -1,5 +1,7 @@
 package models
 
+import "time"
+
 type CreateMeetingReq struct {
 	Name        string  `json:"name" validate:"required"`
 	Description string  `json:"description"`
@@ -10,8 +12,25 @@ type CreateMeetingReq struct {
 }
 
 type MeetingInfoResponse struct {
+	ID          int32  `json:"id"`
 	Name        string `json:"name"`
 	Description string `json:"description"`
 	From        string `json:"from"`
 	To          string `json:"to"`
+}
+
+type FindOptimalMeetingTimeRequest struct {
+	UserIDs            []int32 `json:"participants" validate:"required"`
+	MinDurationMinutes int32   `json:"min_duration_in_minutes" validate:"required"`
+}
+
+type MeetingDataForOptimalCalcTime struct {
+	ID   int32
+	From time.Time
+	To   time.Time
+}
+
+type FindOptimalMeetingTimeResponse struct {
+	From string `json:"from"`
+	To   string `json:"to"`
 }
